DevOps/15-kubernetes/pods/clusterip.yml
// filepath: /Users/kishorkumarparoi/Awesome-Resources/DevOps/15-kubernetes/services/example1-clusterip.yml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.16
        ports:
        - containerPort: 80
---
# ClusterIP Service (internal only)
apiVersion: v1
kind: Service
metadata:
  name: nginx-internal
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
