DevOps/15-kubernetes/pods/loadbalancer.yml
// filepath: /Users/kishorkumarparoi/Awesome-Resources/DevOps/15-kubernetes/services/example3-loadbalancer.yml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: nginx
        image: nginx:1.16
        ports:
        - containerPort: 8080
---
# LoadBalancer Service (production)
apiVersion: v1
kind: Service
metadata:
  name: api-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: api
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
